no fb login for now

--- a/app/views/users/login_and_registration.html.erb
+++ b/app/views/users/login_and_registration.html.erb
@@ -6,9 +6,9 @@
 <div class="modal-body" id="login_forms">
   <div class="well">
     <div class='fblogin'>
-      <%= link_to user_omniauth_authorize_path(:facebook) do %>
-        <%= image_tag('fb_button.png', height: 30) %>
-      <% end %>
+      <%# link_to user_omniauth_authorize_path(:facebook) do %>
+        <%# image_tag('fb_button.png', height: 30) %>
+      <%# end %>
     </div>
     <ul class="nav nav-tabs login_or_registration">
       <li class="<%= !@registration_tab && 'active' %>"><a href="#login" data-toggle="tab">Login</a></li>
